--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 datasets==3.1.0
-duckdb==1.1.3
+duckdb==1.1.1
 emoji==2.14.0
 gensim==4.3.3
-matplotlib==3.8.4
+matplotlib==3.7.5
 nltk==3.9.1
-numpy==2.1.3
-pandas==2.2.3
+numpy==1.24.4
+pandas==2.0.3
 plotly==5.24.1
 rank_bm25==0.2.2
-scikit_learn==1.4.2
+scikit_learn==1.3.2
+streamlit==1.40.1
 textblob==0.18.0.post0
-torch==2.5.1
-transformers==4.46.3
+torch==2.4.1
+transformers==4.46.2
 vaderSentiment==3.3.2
